<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addContactBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_corners"
        android:backgroundTint="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/userName"/>

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/addContactBox"
        app:layout_constraintTop_toTopOf="@id/addContactBox"
        app:layout_constraintBottom_toTopOf="@id/userNameEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_not_preview"
        android:background="@drawable/gold_border"
        />
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/contactImage"
        app:layout_constraintBottom_toTopOf="@id/horizontalLine1"
        android:layout_marginStart="10dp"
        android:paddingTop="16dp"
        android:hint="@string/username"
        android:textColorHint="@color/gold"
        android:textSize="16sp"
        android:textColor="@color/gold"/>

    <RelativeLayout
        android:id="@+id/horizontalLine1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gold"
        app:layout_constraintStart_toEndOf="@id/contactImage"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintEnd_toEndOf="@id/addContactBox"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/contactImage"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine1"
        android:layout_marginStart="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/gold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/gold"/>

    <RelativeLayout
        android:id="@+id/horizontalLine2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gold"
        app:layout_constraintStart_toEndOf="@id/contactImage"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/addContactBox"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/contactImage"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine2"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/userNameEditText"
        android:hint="@string/number"
        android:textColorHint="@color/gold"
        android:textSize="16sp"
        android:textColor="@color/gold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/addContactBox"
        app:layout_constraintTop_toBottomOf="@id/contactImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        style="@style/textField"
        android:textColorHint="@color/gold"
        android:hint="@string/enterUserName"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/addContactBox"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phoneEditText"
        style="@style/textField"
        android:textColorHint="@color/gold"
        android:hint="@string/enterEmail"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="16dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/addContactBox"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintBottom_toTopOf="@id/enterButton"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/textField"
        android:textColorHint="@color/gold"
        android:hint="@string/enterPhoneNumber"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:inputType="phone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/addContactBox"
        app:layout_constraintStart_toStartOf="@id/addContactBox"
        app:layout_constraintEnd_toEndOf="@id/addContactBox"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="16dp"
        style="@style/buttonStyle"
        android:backgroundTint="@color/gold"
        android:text="@string/enterUser"
        android:textAllCaps="false"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>