<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/contactPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/el_balf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/contactName"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/gold"
            android:padding="8dp"
            android:text="@string/contactName"
            app:layout_constraintBottom_toBottomOf="@id/contactPhoto"
            app:layout_constraintStart_toStartOf="@id/contactPhoto" />

        <TextView
            android:id="@+id/contactDetails"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_corners"
            android:backgroundTint="@color/gold"
            android:paddingVertical="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactPhoto" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@id/callIcon"
            app:layout_constraintStart_toStartOf="@id/contactDetails"
            app:layout_constraintTop_toBottomOf="@id/contactPhoto"
            android:src="@drawable/mail_"

            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/callIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/contactDetails"
            app:layout_constraintTop_toBottomOf="@id/emailIcon"
            android:src="@drawable/phone_call"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email"
            style="@style/contactTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/contactEmail"
            app:layout_constraintStart_toEndOf="@id/emailIcon"
            app:layout_constraintTop_toTopOf="@id/emailIcon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneNumber"
            style="@style/contactTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/contactNumber"
            app:layout_constraintStart_toEndOf="@id/callIcon"
            app:layout_constraintTop_toTopOf="@id/callIcon" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/deleteButton"
            style="@style/deleteButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/del"
            app:layout_constraintBottom_toBottomOf="@id/contactDetails"
            app:layout_constraintEnd_toEndOf="@id/contactDetails"
            app:layout_constraintStart_toStartOf="@id/contactDetails"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>